--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,16 @@ img {
 .red {
     color: darkred;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+button {
+    margin: 50px;
+    width: 100px;
+    color: hotpink;
+}
